new file:   data/blog-content.json 	new file:   data/blog-nav.json 	modified:   locales/vi.json

--- a/locales/vi.json
+++ b/locales/vi.json
@@ -4,7 +4,7 @@
     "introPart1": "Mình là",
     "introName": "Trần Văn Nam",
     "introPart2": "Lập trình viên phần mềm",
-    "greeting": "Rất vui được gặp bạn, mình là Trần Văn Nam,\n Sinh viên của trường Đại học Kinh tế và Luật \nChuyên ngành: Hệ thống thông tin quản lý",
+    "greeting": "Rất vui được gặp bạn, mình là Trần Văn Nam,<br> Sinh viên của trường Đại học Kinh tế và Luật <br> Chuyên ngành: Hệ thống thông tin quản lý",
     "intern": "Thực tập sinh",
     "careerObjective": "Mục tiêu nghề nghiệp",
     "experience": "Kinh nghiệm làm việc",
