modified:   index.html 	modified:   js/functions.js 	modified:   js/translate.js 	modified:   locales/en.json 	modified:   locales/vi.json

--- a/locales/en.json
+++ b/locales/en.json
@@ -28,5 +28,5 @@
         "sap_erp": "<b>SAP ERP:</b> Understanding of key terms and basic operations within the system.",
         "business_intelligence": "<b>Business Intelligence:</b> Utilized SSIS and SSAS tools for data integration, and Power BI for dashboard visualization.",
       "contact": "Contact",
-      "phone": "Phone number \n0366 187 296"
+      "phone": "Phone number <br>0366 187 296"
 }
