--- a/locales/vi.json
+++ b/locales/vi.json
@@ -28,5 +28,5 @@
         "sap_erp": "<b>SAP ERP:</b> Hiểu các thuật ngữ chính và thao tác cơ bản trong hệ thống.",
         "business_intelligence": "<b>Business Intelligence:</b> Sử dụng các công cụ SSIS và SSAS để tích hợp và chuyển đổi dữ liệu, và Power BI để trực quan hóa dữ liệu",
     "contact": "Liên hệ",
-    "phone": "Số điện thoại \n0366 187 296"
+    "phone": "Số điện thoại <br>0366 187 296"
 }
