modified:   blog.html 	modified:   css/cssblog.css 	modified:   index.html 	modified:   locales/en.json 	modified:   locales/vi.json

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,6 @@
 {
       "title": "Profile",
+      "title2":"Blog",
       "hello": "Hello!",
       "introPart1": "I’m",
       "introName": "Tran Van Nam",
