--- a/locales/vi.json
+++ b/locales/vi.json
@@ -1,5 +1,6 @@
 {
     "title": "Hồ sơ",
+    "title2":"Blog",
     "hello": "Xin chào!",
     "introPart1": "Mình là",
     "introName": "Trần Văn Nam",
