modified:   locales/en.json

--- a/locales/en.json
+++ b/locales/en.json
@@ -5,7 +5,7 @@
       "introPart1": "I’m",
       "introName": "Tran Van Nam",
       "introPart2": "Software Developer",
-      "greeting": "Nice to meet you, I’m Trần Văn Nam,<br> I’m a student of University of Economic and Law <br> Major: Management information System",
+      "greeting": "Nice to meet you, I’m Trần Văn Nam,<br> I’m a student of University of Economic and Law <br> Major: Management Information System",
       "intern": "Intern",
       "careerObjective": "Career Objective",
       "experience": "Experience",
