new file:   .vscode/settings.json 	modified:   blog.html 	new file:   components/footer.html 	new file:   components/header.html 	new file:   components/nav.html 	modified:   css/cssblog.css 	modified:   css/style.css 	new file:   images/BB1msDMQ.png 	new file:   images/Local-Area-Network.jpg 	new file:   images/bluetooth-logo.jpg 	new file:   images/bus-topology.jpg 	new file:   images/cable-ex.jpg 	new file:   images/cap-cat5e.jpg 	new file:   images/card-mang.jpg 	new file:   images/client-server-la-gi.jpg 	new file:   images/computer-ex.jpeg 	new file:   images/mesh-topology.jpg 	new file:   images/modem-ex.png 	new file:   images/phone-ex.jpeg 	new file:   images/printer.jpeg 	new file:   images/ring-topology.jpg 	new file:   images/router-ex.jpeg 	new file:   images/soldiers-8903095_1280.jpg 	new file:   images/stat-topology.jpg 	new file:   images/switch-ex.jpg 	new file:   images/wifi-ex.png 	new file:   internet.html 	new file:   js/load-compoments.js 	new file:   js/scroll-spy.js 	modified:   js/translate.js 	modified:   locales/en.json 	modified:   locales/vi.json 	new file:   post2.html

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,33 +1,174 @@
 {
-      "title": "Profile",
-      "title2":"Blog",
-      "hello": "Hello!",
-      "introPart1": "I’m",
-      "introName": "Tran Van Nam",
-      "introPart2": "Software Developer",
-      "greeting": "Nice to meet you, I’m Trần Văn Nam,<br> I’m a student of University of Economic and Law <br> Major: Management Information System",
-      "intern": "Intern",
-      "careerObjective": "Career Objective",
-      "experience": "Experience",
-      "projects": "Projects at university",
-      "showvideo": "Video demo",
-      "androiddescription":"This Android app, built using Android Studio and Firebase, ensures secure data storage and ease of use. It features a user-friendly interface and data analysis tools for administrators.",
-      "ecommerce_description": "This e-commerce site, built with Angular, Node.js, and MongoDB, offers product browsing, cart management, purchases, and secure user authentication with a modern UI.",
-      "internship_objective": "\"I am currently looking for an internship opportunity in the technology sector, where I can apply my knowledge and practical experience gained through university projects and learn new things from team. With a strong desire to become a software developer, I am eager to contribute to projects, collaborate effectively within teams, and help the organization achieve its goals.\" ---2024",
-      "experience_company": "QT-Data Inc, Technology Internship",
-      "experience_duration": "03/2023 - 06/2023",
-      "experience_certificate": "Certificate",
-      "contribute_title": "Contribute",
-        "contribute_list_1": "<b>Crawled data:</b> Developed scripts and tools for web scraping and data extraction.",
-        "contribute_list_2": "<b>Developed automation tools:</b> Created and maintained tools to automate repetitive tasks and improve workflow efficiency.",
-        "contribute_list_3": "<b>Updated working systems:</b> Updated code to display work notifications and ensure accurate information is presented to teams.",
-      "tools": "Tools",
-      "skills": "Specialized tools",
-      "knowledge": "Knowledge",
-      "basic_website": "<b>Developed a basic website:</b> Analyzed business processes, designed UI interfaces, developed front-end and back-end, designed database structures, and deployed the application.",
-        "basic_android_app": "<b>Developed a basic Android application:</b> Analyzed business processes, designed UI interfaces, developed the front-end, and designed database structures.",
-        "sap_erp": "<b>SAP ERP:</b> Understanding of key terms and basic operations within the system.",
-        "business_intelligence": "<b>Business Intelligence:</b> Utilized SSIS and SSAS tools for data integration, and Power BI for dashboard visualization.",
-      "contact": "Contact",
-      "phone": "Phone number <br>0366 187 296"
+  "title": "Profile",
+  "title2": "Blog",
+  "hello": "Hello!",
+  "introPart1": "I’m",
+  "introName": "Tran Van Nam",
+  "introPart2": "Software Developer",
+  "greeting": "Nice to meet you, I’m Trần Văn Nam,<br> I’m a student of University of Economic and Law <br> Major: Management Information System",
+  "intern": "Intern",
+  "careerObjective": "Career Objective",
+  "experience": "Experience",
+  "projects": "Projects at university",
+  "showvideo": "Video demo",
+  "androiddescription": "This Android app, built using Android Studio and Firebase, ensures secure data storage and ease of use. It features a user-friendly interface and data analysis tools for administrators.",
+  "ecommerce_description": "This e-commerce site, built with Angular, Node.js, and MongoDB, offers product browsing, cart management, purchases, and secure user authentication with a modern UI.",
+  "internship_objective": "\"I am currently looking for an internship opportunity in the technology sector, where I can apply my knowledge and practical experience gained through university projects and learn new things from team. With a strong desire to become a software developer, I am eager to contribute to projects, collaborate effectively within teams, and help the organization achieve its goals.\" ---2024",
+  "experience_company": "QT-Data Inc, Technology Internship",
+  "experience_duration": "03/2023 - 06/2023",
+  "experience_certificate": "Certificate",
+  "contribute_title": "Contribute",
+  "contribute_list_1": "<b>Crawled data:</b> Developed scripts and tools for web scraping and data extraction.",
+  "contribute_list_2": "<b>Developed automation tools:</b> Created and maintained tools to automate repetitive tasks and improve workflow efficiency.",
+  "contribute_list_3": "<b>Updated working systems:</b> Updated code to display work notifications and ensure accurate information is presented to teams.",
+  "tools": "Tools",
+  "skills": "Specialized tools",
+  "knowledge": "Knowledge",
+  "basic_website": "<b>Developed a basic website:</b> Analyzed business processes, designed UI interfaces, developed front-end and back-end, designed database structures, and deployed the application.",
+  "basic_android_app": "<b>Developed a basic Android application:</b> Analyzed business processes, designed UI interfaces, developed the front-end, and designed database structures.",
+  "sap_erp": "<b>SAP ERP:</b> Understanding of key terms and basic operations within the system.",
+  "business_intelligence": "<b>Business Intelligence:</b> Utilized SSIS and SSAS tools for data integration, and Power BI for dashboard visualization.",
+  "contact": "Contact",
+  "phone": "Phone number <br>0366 187 296",
+  "blogWelcomeTitle": "Welcome to My Blog!",
+  "blogIntroduction": "Introduction",
+  "blogWelcomeIntro1": "This blog is dedicated to sharing knowledge and insights about various technologies. Whether you are a beginner or an experienced professional, I hope you find the content here helpful and informative.",
+  "blogWelcomeIntro2": "You'll find a variety of topics covered here, including web development, mobile applications, artificial intelligence, machine learning, cybersecurity, and much more. Each article is crafted to give you actionable insights and knowledge that you can apply directly to your work or studies.",
+  "blogWelcomeIntro3": "Thank you for visiting my blog. I hope you find the articles here useful and inspiring.",
+  "blogWelcomeIntro4": "Have a great day!",
+  "start_topic": "In this era of rapid technological advancement, computer networks have become an essential part of daily life. This network system enables the sharing and transmission of resources more quickly and conveniently than ever before. To explore computer networks, from basic concepts and benefits to classifications of network systems, read the article below.",
+  "networkDefinition": "A computer network is a system that connects multiple computers and devices through communication mediums such as cables, radio waves, or optical environments. By using network devices like routers, switches, and data transmission protocols, computer networks enable computers to communicate and share resources efficiently. This network can be set up in a small scope like a home or office network or expanded globally like the Internet.",
+  "networkDefinitionTitle": "What is a Computer Network?",
+  "networkComponentsTitle": "Components of a Computer Network",
+  "networkComponentsDesc": "A computer network includes important components:",
+  "networkComponentsHeader": "A computer network includes important components:",
+  "networkDevicesTitle": "Network Devices:",
+  "networkDevicesDesc": "Devices such as routers, switches, and modems help manage the connection and data transmission within the network.",
+  "networkDevicesDetails": "Routers, switches, and modems are crucial devices that establish and maintain network connections, allowing data to be transmitted between devices within the network and to the Internet.",
+  "transmissionMediumTitle": "Transmission Medium:",
+  "transmissionMediumDesc": "Transmission mediums such as cables and electromagnetic waves help transmit information between devices in the network.",
+  "transmissionMediumDetails": "Transmission mediums play a crucial role in connecting and transferring data between devices in the network. The choice of transmission medium depends on communication needs, distance, data transmission speed, and usage environment.",
+  "endDevicesTitle": "End Devices:",
+  "endDevicesDesc": "Devices such as computers, smartphones, and printers function as endpoints of the network.",
+  "networkProtocolsTitle": "Communication Protocols:",
+  "networkProtocolsDesc": "The rules and regulations for devices to send and receive data over the network are called network protocols. Network protocols define how data is transmitted and received between devices in the network. They dictate the exchange of information, how devices communicate, and handle data.",
+  "commonProtocols": "Some common network protocols: TCP/IP (Transmission Control Protocol/Internet Protocol) || HTTP/HTTPS (Hypertext Transfer Protocol / Hypertext Transfer Protocol Secure)",
+  "fiberOpticCaption": "Fiber Optic Cables",
+  "copperCablesCaption": "Copper Cables",
+  "wifiCaption": "Wi-Fi (Wireless Fidelity)",
+  "computerCaption": "Computer",
+  "smartphoneCaption": "Smartphone",
+  "printerCaption": "Printer",
+  "networkBenefitsTitle": "Benefits of Computer Networks",
+  "resourceSharingTitle": "Resource Sharing:",
+  "resourceSharingDetails": "Easily share data, devices such as printers and drives.",
+  "enhancedCommunicationTitle": "Enhanced Communication:",
+  "enhancedCommunicationDetails": "Supports email, messaging, and video calls.",
+  "centralizedManagementTitle": "Centralized Management:",
+  "centralizedManagementDetails": "Manage devices and update software remotely.",
+  "scalabilityTitle": "Scalability:",
+  "scalabilityDetails": "Easily expand and upgrade the network.",
+  "improvedEfficiencyTitle": "Improved Work Efficiency:",
+  "improvedEfficiencyDetails": "Supports collaboration and automates processes.",
+  "costSavingTitle": "Cost Savings:",
+  "costSavingDetails": "Reduces costs for equipment and communication.",
+  "securityAndBackupTitle": "Security and Backup:",
+  "securityAndBackupDetails": "Provides data backup and system security.",
+  "remoteAccessTitle": "Remote Access:",
+  "remoteAccessDetails": "Allows remote work and data access.",
+  "servicesAndApplicationsTitle": "Services and Applications:",
+  "servicesAndApplicationsDetails": "Utilizes online services and web applications.",
+  "researchAndDevelopmentTitle": "Research and Development Support:",
+  "researchAndDevelopmentDetails": "Shares computing resources for research.",
+  "networkTrendsTitle": "Trends in Computer Networking Today",
+  "5GAnd6GTitle": "5G and 6G Networks:",
+  "5GAnd6GDetails": "Providing faster data transmission speeds and lower latency, with 6G expected to enhance speeds and global connectivity.",
+  "cloudNetworkingTitle": "Cloud Networking:",
+  "cloudNetworkingDetails": "Using cloud services to expand network infrastructure and Edge Computing applications to reduce latency.",
+  "sdnTitle": "Software-Defined Networking (SDN):",
+  "sdnDetails": "Managing and configuring networks through software, enhancing flexibility and automation.",
+  "nfvTitle": "Network Functions Virtualization (NFV):",
+  "nfvDetails": "Virtualizing network functions to run on standard hardware, reducing costs and improving flexibility.",
+  "iotTitle": "Internet of Things (IoT):",
+  "iotDetails": "Connecting smart devices and sensors, supporting smart homes and smart cities.",
+  "networkModelsTitle": "Classification of Computer Network Models",
+  "p2pTitle": "Peer-to-Peer (P2P) Network",
+  "p2pAdvantagesTitle": "Advantages:",
+  "p2pAdvantage1": "Low cost: No need for expensive central hardware.",
+  "p2pAdvantage2": "Easy setup: Suitable for small and simple networks.",
+  "p2pAdvantage3": "Resource sharing: All computers in the network can share resources.",
+  "p2pDisadvantagesTitle": "Disadvantages:",
+  "p2pDisadvantage1": "Limited scalability: Difficult to expand as the number of devices increases.",
+  "p2pDisadvantage2": "Management and security: Lacks centralized management and may have poorer security.",
+  "p2pDisadvantage3": "Performance issues: Performance can decrease as the number of computers and traffic increases.",
+  "clientServerTitle": "Client-Server Network",
+  "clientServerAdvantagesTitle": "Advantages:",
+  "clientServerAdvantage1": "Centralized management: Easy to manage, maintain, and secure from the server.",
+  "clientServerAdvantage2": "Good scalability: Can easily scale with a large number of clients.",
+  "clientServerAdvantage3": "Stable performance: Network performance is more stable due to a powerful server.",
+  "clientServerDisadvantagesTitle": "Disadvantages:",
+  "clientServerDisadvantage1": "High cost: Requires investment in server hardware and management software.",
+  "clientServerDisadvantage2": "Server dependency: If the server encounters issues, the entire network can be affected.",
+  "clientServerDisadvantage3": "Complex configuration: Requires frequent configuration and maintenance of the server.",
+  "lanTitle": "Local Area Network (LAN)",
+  "lanAdvantagesTitle": "Advantages:",
+  "lanAdvantage1": "High speed: Provides fast data transmission within a small area.",
+  "lanAdvantage2": "Low cost: Suitable for small organizations and offices.",
+  "lanAdvantage3": "Easy connectivity: Connects devices within a limited geographical area such as a building or office.",
+  "lanDisadvantagesTitle": "Disadvantages:",
+  "lanDisadvantage1": "Limited range: Operates only within a small geographical area, such as within a building or facility.",
+  "lanDisadvantage2": "Security and management: Requires security measures and management to ensure performance and safety.",
+  "lanImageAlt": "Local Area Network",
+  "wanTitle": "Wide Area Network (WAN)",
+  "wanAdvantagesTitle": "Advantages:",
+  "wanAdvantage1": "Large coverage: Connects devices and networks over a wide area, such as cities, countries, or globally.",
+  "wanAdvantage2": "Connects multiple locations: Suitable for organizations with multiple branches or distributed offices.",
+  "wanDisadvantagesTitle": "Disadvantages:",
+  "wanDisadvantage1": "High cost: Requires significant investment in hardware, software, and connectivity.",
+  "wanDisadvantage2": "High latency: Latency and transmission speed can be unstable due to long distances.",
+  "wanDisadvantage3": "Complex management: Requires management and maintenance of a complex network system.",
+  "networkModelsPopularTitle": "Popular Computer Network Models",
+  "networkModelsIntro": "In practice, computer network models are evolving every day and awaiting opportunities for announcement. Here are 4 highly popular Topology models at present:",
+  "starTopologyTitle": "Star Topology",
+  "starTopologyDescription": "Star topology is a network model where all devices connect to a central point, usually a switch or hub. This is one of the most popular models due to its flexibility and easy scalability.",
+  "starTopologyAdvantagesTitle": "Advantages:",
+  "starTopologyAdvantage1": "Easy management and maintenance: If one device fails, other devices are not affected.",
+  "starTopologyAdvantage2": "High scalability: New devices can be added to the network without interrupting the operation of other devices.",
+  "starTopologyAdvantage3": "Easy fault detection: When a fault occurs, it is easy to identify and fix.",
+  "starTopologyDisadvantagesTitle": "Disadvantages:",
+  "starTopologyDisadvantage1": "Dependent on central point: If the central point fails, the entire network will be affected.",
+  "starTopologyDisadvantage2": "High cost: Requires more cables and central devices, which can increase the cost.",
+  "starTopologyImageAlt": "Star Topology",
+  "busTopologyTitle": "Bus Topology",
+  "busTopologyDescription": "Bus topology connects all devices via a main cable. This is a simple and low-cost model.",
+  "busTopologyAdvantagesTitle": "Advantages:",
+  "busTopologyAdvantage1": "Low cost: Requires fewer cables and devices compared to other models.",
+  "busTopologyAdvantage2": "Easy to implement: Simple to set up and configure.",
+  "busTopologyDisadvantagesTitle": "Disadvantages:",
+  "busTopologyDisadvantage1": "Hard to expand: Adding new devices can reduce performance and cause issues.",
+  "busTopologyDisadvantage2": "Prone to interference: A fault on the main cable can disrupt the entire network.",
+  "busTopologyImageAlt": "Bus Topology",
+  "ringTopologyTitle": "Ring Topology",
+  "ringTopologyDescription": "Ring topology connects all devices in a circular manner, with data transmitted in a specific direction.",
+  "ringTopologyAdvantagesTitle": "Advantages:",
+  "ringTopologyAdvantage1": "Simple management: Easy to manage and configure due to minimal interference from other devices.",
+  "ringTopologyAdvantage2": "Stable performance: Network performance is less affected by traffic load.",
+  "ringTopologyDisadvantagesTitle": "Disadvantages:",
+  "ringTopologyDisadvantage1": "Faults can disrupt the network: If one device fails, the entire network may be affected.",
+  "ringTopologyDisadvantage2": "Hard to expand: Adding new devices can increase complexity and cause issues.",
+  "ringTopologyImageAlt": "Ring Topology",
+  "meshTopologyTitle": "Mesh Topology",
+  "meshTopologyDescription": "Mesh topology connects each device to all other devices in the network, providing high reliability and redundancy.",
+  "meshTopologyAdvantagesTitle": "Advantages:",
+  "meshTopologyAdvantage1": "High reliability: If one link fails, data can be routed through other links.",
+  "meshTopologyAdvantage2": "Good scalability: Easily add new devices without disrupting network operations.",
+  "meshTopologyDisadvantagesTitle": "Disadvantages:",
+  "meshTopologyDisadvantage1": "High cost: Requires more cables and devices, increasing deployment costs.",
+  "meshTopologyDisadvantage2": "Complex management: Managing and configuring the network can be very complex.",
+  "meshTopologyImageAlt": "Mesh Topology",
+  "conclusionTitle": "Conclusion",
+  "conclusionText": "Computer networks are continually evolving and shaping the future of both society and the economy. I hope the information I have shared provides you with a deeper understanding of the role and various aspects of computer networks. To expand your knowledge about telecommunications technology, network systems, and other advanced technology trends, be sure not to miss the updated posts on my blog."
+,"contents":"Blog posts",
+"TableOfContents":"Table of Contents"
+
 }
