--- a/locales/vi.json
+++ b/locales/vi.json
@@ -1,6 +1,6 @@
 {
     "title": "Hồ sơ",
-    "title2":"Blog",
+    "title2": "Blog",
     "hello": "Xin chào!",
     "introPart1": "Mình là",
     "introName": "Trần Văn Nam",
@@ -18,16 +18,156 @@
     "experience_duration": "03/2023 - 06/2023",
     "experience_certificate": "Chứng chỉ",
     "contribute_title": "Đóng góp",
-        "contribute_list_1": "<b>Thu tập dữ liệu:</b> Phát triển kịch bản và công cụ để thu thập dữ liệu từ web.",
-        "contribute_list_2": "<b>Phát triển công cụ tự động hóa:</b> Thêm mới và bảo trì các công cụ để tự động hóa các nhiệm vụ lặp đi lặp lại nhằm cải thiện hiệu quả công việc.",
-        "contribute_list_3": "<b>Cập nhật hệ thống làm việc:</b> Cập nhật phần mềm hiển thị thông báo công việc và đảm bảo thông tin chính xác được hiển thị đến nhóm.",
+    "contribute_list_1": "<b>Thu tập dữ liệu:</b> Phát triển kịch bản và công cụ để thu thập dữ liệu từ web.",
+    "contribute_list_2": "<b>Phát triển công cụ tự động hóa:</b> Thêm mới và bảo trì các công cụ để tự động hóa các nhiệm vụ lặp đi lặp lại nhằm cải thiện hiệu quả công việc.",
+    "contribute_list_3": "<b>Cập nhật hệ thống làm việc:</b> Cập nhật phần mềm hiển thị thông báo công việc và đảm bảo thông tin chính xác được hiển thị đến nhóm.",
     "tools": "Công cụ",
     "skills": "Các công cụ chuyên môn",
     "knowledge": "Kiến thức",
     "basic_website": "<b>Phát triển một trang web cơ bản:</b> Phân tích quy trình kinh doanh, thiết kế giao diện UI, phát triển front-end và back-end, thiết kế cấu trúc cơ sở dữ liệu và triển khai ứng dụng.",
-        "basic_android_app": "<b>Phát triển một ứng dụng Android cơ bản:</b> Phân tích quy trình kinh doanh, thiết kế giao diện UI, phát triển front-end và thiết kế cấu trúc cơ sở dữ liệu.",
-        "sap_erp": "<b>SAP ERP:</b> Hiểu các thuật ngữ chính và thao tác cơ bản trong hệ thống.",
-        "business_intelligence": "<b>Business Intelligence:</b> Sử dụng các công cụ SSIS và SSAS để tích hợp và chuyển đổi dữ liệu, và Power BI để trực quan hóa dữ liệu",
+    "basic_android_app": "<b>Phát triển một ứng dụng Android cơ bản:</b> Phân tích quy trình kinh doanh, thiết kế giao diện UI, phát triển front-end và thiết kế cấu trúc cơ sở dữ liệu.",
+    "sap_erp": "<b>SAP ERP:</b> Hiểu các thuật ngữ chính và thao tác cơ bản trong hệ thống.",
+    "business_intelligence": "<b>Business Intelligence:</b> Sử dụng các công cụ SSIS và SSAS để tích hợp và chuyển đổi dữ liệu, và Power BI để trực quan hóa dữ liệu",
     "contact": "Liên hệ",
-    "phone": "Số điện thoại <br>0366 187 296"
+    "phone": "Số điện thoại <br>0366 187 296",
+    "blogWelcomeTitle": "Chào mừng đến với Blog của tôi!",
+    "blogIntroduction": "Giới thiệu",
+    "blogWelcomeIntro1": "Blog này dành để chia sẻ kiến thức và thông tin về các công nghệ khác nhau. Cho dù bạn là người mới bắt đầu hay là một chuyên gia giàu kinh nghiệm, tôi hy vọng bạn sẽ thấy nội dung ở đây hữu ích và thú vị.",
+    "blogWelcomeIntro2": "Bạn sẽ tìm thấy nhiều chủ đề khác nhau được đề cập ở đây, bao gồm phát triển web, ứng dụng di động, trí tuệ nhân tạo, học máy, an ninh mạng, và nhiều hơn nữa. Mỗi bài viết được viết để cung cấp cho bạn những kiến thức và thông tin hữu ích mà bạn có thể áp dụng trực tiếp vào công việc hoặc học tập của mình.",
+    "blogWelcomeIntro3": "Cảm ơn bạn đã ghé thăm blog của tôi. Hy vọng bạn thấy các bài viết ở đây hữu ích và truyền cảm hứng.",
+    "blogWelcomeIntro4": "Chúc một ngày tốt lành!",
+    "start_topic": "Trong thời đại khoa học công nghệ phát triển vượt bậc, mạng máy tính đã trở thành yếu tố thiết yếu trong cuộc sống hàng ngày. Hệ thống mạng lưới này cho phép chia sẻ và truyền tải tài nguyên một cách nhanh chóng và tiện lợi hơn bao giờ hết. Để khám phá về mạng máy tính, từ khái niệm cơ bản, các lợi ích đến phân loại các hệ thống mạng, hãy cùng đọc bài viết dưới đây.",
+    "networkDefinition": "Mạng máy tính là một hệ thống kết nối nhiều máy tính và thiết bị qua các phương tiện truyền thông như cáp, sóng vô tuyến, hoặc môi trường quang học. Bằng cách sử dụng các thiết bị mạng như bộ định tuyến, chuyển mạch, và các giao thức truyền dữ liệu, mạng máy tính cho phép các máy tính giao tiếp và chia sẻ tài nguyên một cách hiệu quả. Mạng này có thể được thiết lập trong một phạm vi nhỏ như mạng gia đình hoặc văn phòng, hoặc mở rộng ra toàn cầu như Internet.",
+    "networkDefinitionTitle": "Mạng máy tính là gì?",
+    "networkComponentsTitle": "Các thành phần của mạng máy tính",
+    "networkComponentsDesc": "Mạng máy tính bao gồm các thành phần quan trọng:",
+    "networkComponentsHeader": "Mạng máy tính bao gồm các thành phần quan trọng:",
+    "networkDevicesTitle": "Thiết bị kết nối mạng:",
+    "networkDevicesDesc": "Các thiết bị như bộ định tuyến (Router), switch (Bộ chuyển mạch), và modem giúp quản lý việc kết nối và truyền tải dữ liệu trong mạng.",
+    "networkDevicesDetails": "Bộ định tuyến, switch, và modem là những thiết bị quan trọng giúp thiết lập và duy trì kết nối mạng, cho phép dữ liệu được truyền tải giữa các thiết bị trong mạng và giữa mạng với Internet.",
+    "transmissionMediumTitle": "Môi trường truyền dẫn:",
+    "transmissionMediumDesc": "Phương tiện truyền dẫn như dây dẫn, sóng điện từ, giúp truyền thông tin giữa các thiết bị trong mạng.",
+    "transmissionMediumDetails": "Phương tiện truyền dẫn đóng vai trò quan trọng trong việc kết nối và truyền tải dữ liệu giữa các thiết bị trong mạng. Lựa chọn phương tiện truyền dẫn phù hợp sẽ phụ thuộc vào nhu cầu truyền thông, khoảng cách, tốc độ truyền dữ liệu, và môi trường sử dụng.",
+    "endDevicesTitle": "Thiết bị đầu cuối:",
+    "endDevicesDesc": "Các thiết bị như máy tính, điện thoại thông minh, máy in, hoạt động như điểm kết thúc của mạng.",
+    "networkProtocolsTitle": "Giao thức truyền thông:",
+    "networkProtocolsDesc": "Các quy tắc và quy định để các thiết bị gửi và nhận dữ liệu trên mạng được gọi là giao thức mạng (network protocols). Giao thức mạng định nghĩa cách dữ liệu được truyền và nhận giữa các thiết bị trong mạng. Chúng quy định cách thức trao đổi thông tin, cách các thiết bị giao tiếp và xử lý dữ liệu.",
+    "commonProtocols": "Một số giao thức mạng phổ biến: TCP/IP (Transmission Control Protocol/Internet Protocol) || HTTP/HTTPS (Hypertext Transfer Protocol / Hypertext Transfer Protocol Secure)",
+    "fiberOpticCaption": "Cáp quang (Fiber Optic Cables)",
+    "copperCablesCaption": "Dây đồng (Copper Cables)",
+    "wifiCaption": "Wi-Fi (Wireless Fidelity)",
+    "computerCaption": "Máy tính",
+    "smartphoneCaption": "Điện thoại thông minh",
+    "printerCaption": "Máy in",
+    "networkBenefitsTitle": "Lợi ích của Mạng Máy Tính",
+    "resourceSharingTitle": "Chia sẻ tài nguyên:",
+    "resourceSharingDetails": "Dễ dàng chia sẻ dữ liệu, thiết bị như máy in và ổ đĩa.",
+    "enhancedCommunicationTitle": "Tăng cường giao tiếp:",
+    "enhancedCommunicationDetails": "Hỗ trợ email, tin nhắn, và cuộc gọi video.",
+    "centralizedManagementTitle": "Quản lý tập trung:",
+    "centralizedManagementDetails": "Quản lý thiết bị và cập nhật phần mềm từ xa.",
+    "scalabilityTitle": "Khả năng mở rộng:",
+    "scalabilityDetails": "Dễ dàng mở rộng và nâng cấp mạng.",
+    "improvedEfficiencyTitle": "Cải thiện hiệu quả công việc:",
+    "improvedEfficiencyDetails": "Hỗ trợ hợp tác, tự động hóa quy trình.",
+    "costSavingTitle": "Tiết kiệm chi phí:",
+    "costSavingDetails": "Giảm chi phí thiết bị và liên lạc.",
+    "securityAndBackupTitle": "Bảo mật và sao lưu:",
+    "securityAndBackupDetails": "Cung cấp sao lưu dữ liệu và bảo mật hệ thống.",
+    "remoteAccessTitle": "Truy cập từ xa:",
+    "remoteAccessDetails": "Cho phép làm việc và truy cập dữ liệu từ xa.",
+    "servicesAndApplicationsTitle": "Cung cấp dịch vụ và ứng dụng:",
+    "servicesAndApplicationsDetails": "Sử dụng dịch vụ trực tuyến và ứng dụng web.",
+    "researchAndDevelopmentTitle": "Hỗ trợ nghiên cứu và phát triển:",
+    "researchAndDevelopmentDetails": "Chia sẻ tài nguyên tính toán cho nghiên cứu.",
+    "networkTrendsTitle": "Xu Hướng Phát Triển của Mạng Máy Tính Hiện Nay",
+    "5GAnd6GTitle": "Mạng 5G và 6G:",
+    "5GAnd6GDetails": "Cung cấp tốc độ truyền tải dữ liệu nhanh hơn và độ trễ thấp hơn, với 6G dự kiến sẽ nâng cao tốc độ và kết nối toàn cầu.",
+    "cloudNetworkingTitle": "Mạng Đám Mây (Cloud Networking):",
+    "cloudNetworkingDetails": "Sử dụng dịch vụ đám mây để mở rộng hạ tầng mạng và ứng dụng Edge Computing để giảm độ trễ.",
+    "sdnTitle": "Mạng Số (SDN):",
+    "sdnDetails": "Quản lý và cấu hình mạng thông qua phần mềm, tăng cường tính linh hoạt và tự động hóa.",
+    "nfvTitle": "Mạng Ảo (NFV):",
+    "nfvDetails": "Ảo hóa các chức năng mạng để chạy trên phần cứng tiêu chuẩn, giảm chi phí và cải thiện tính linh hoạt.",
+    "iotTitle": "IoT (Internet of Things):",
+    "iotDetails": "Kết nối thiết bị thông minh và cảm biến, hỗ trợ nhà thông minh và thành phố thông minh.",
+    "networkModelsTitle": "Phân loại các mô hình Mạng Máy Tính",
+    "p2pTitle": "Mạng Peer-to-Peer (P2P)",
+    "p2pAdvantagesTitle": "Ưu điểm:",
+    "p2pAdvantage1": "Chi phí thấp: Không cần thiết bị phần cứng trung tâm đắt tiền.",
+    "p2pAdvantage2": "Dễ dàng thiết lập: Phù hợp cho mạng nhỏ và đơn giản.",
+    "p2pAdvantage3": "Cung cấp tài nguyên chia sẻ: Tất cả các máy tính trong mạng đều có thể chia sẻ tài nguyên.",
+    "p2pDisadvantagesTitle": "Nhược điểm:",
+    "p2pDisadvantage1": "Khả năng mở rộng hạn chế: Khó mở rộng khi số lượng thiết bị tăng lên.",
+    "p2pDisadvantage2": "Quản lý và bảo mật: Thiếu khả năng quản lý tập trung và bảo mật có thể kém hơn.",
+    "p2pDisadvantage3": "Hiệu suất giảm: Hiệu suất có thể giảm khi số lượng máy tính và lưu lượng tăng.",
+    "clientServerTitle": "Mạng Client-Server",
+    "clientServerAdvantagesTitle": "Ưu điểm:",
+    "clientServerAdvantage1": "Quản lý tập trung: Dễ dàng quản lý, bảo trì và bảo mật từ máy chủ.",
+    "clientServerAdvantage2": "Khả năng mở rộng tốt: Có thể mở rộng dễ dàng với số lượng khách hàng lớn.",
+    "clientServerAdvantage3": "Hiệu suất ổn định: Hiệu suất mạng ổn định hơn nhờ vào máy chủ mạnh mẽ.",
+    "clientServerDisadvantagesTitle": "Nhược điểm:",
+    "clientServerDisadvantage1": "Chi phí cao: Cần đầu tư vào phần cứng máy chủ và phần mềm quản lý.",
+    "clientServerDisadvantage2": "Phụ thuộc vào máy chủ: Nếu máy chủ gặp sự cố, toàn bộ mạng có thể bị ảnh hưởng.",
+    "clientServerDisadvantage3": "Phức tạp trong cấu hình: Cần cấu hình và bảo trì máy chủ thường xuyên.",
+    "lanTitle": "Mạng LAN (Local Area Network)",
+    "lanAdvantagesTitle": "Ưu điểm:",
+    "lanAdvantage1": "Tốc độ cao: Cung cấp tốc độ truyền tải dữ liệu nhanh trong phạm vi nhỏ.",
+    "lanAdvantage2": "Chi phí thấp: Thích hợp cho các tổ chức nhỏ và văn phòng.",
+    "lanAdvantage3": "Dễ dàng kết nối: Kết nối các thiết bị trong một khu vực địa lý hạn chế như một tòa nhà hoặc văn phòng.",
+    "lanDisadvantagesTitle": "Nhược điểm:",
+    "lanDisadvantage1": "Phạm vi hạn chế: Chỉ hoạt động trong phạm vi địa lý nhỏ, như trong một tòa nhà hoặc cơ sở.",
+    "lanDisadvantage2": "Bảo mật và quản lý: Cần các biện pháp bảo mật và quản lý để đảm bảo hiệu suất và an toàn.",
+    "lanImageAlt": "Mạng LAN",
+    "wanTitle": "Mạng WAN (Wide Area Network)",
+    "wanAdvantagesTitle": "Ưu điểm:",
+    "wanAdvantage1": "Phạm vi rộng lớn: Kết nối các thiết bị và mạng trong phạm vi rộng, như các thành phố, quốc gia, hoặc toàn cầu.",
+    "wanAdvantage2": "Kết nối nhiều vị trí: Phù hợp cho các tổ chức có nhiều chi nhánh hoặc văn phòng phân tán.",
+    "wanDisadvantagesTitle": "Nhược điểm:",
+    "wanDisadvantage1": "Chi phí cao: Cần đầu tư lớn vào phần cứng, phần mềm và chi phí kết nối.",
+    "wanDisadvantage2": "Độ trễ cao: Độ trễ và tốc độ truyền tải có thể không ổn định do khoảng cách xa.",
+    "wanDisadvantage3": "Quản lý phức tạp: Cần phải quản lý và duy trì hệ thống mạng phức tạp.",
+    "networkModelsPopularTitle": "Các mô hình mạng máy tính phổ biến",
+    "networkModelsIntro": "Thực tế, mô hình mạng máy tính sẽ được phát triển mỗi ngày và chờ cơ hội công bố. Dưới đây là 4 mô hình Topology có mức độ phổ biến cao ở hiện tại:",
+    "starTopologyTitle": "Mạng Hình Sao (Star Topology)",
+    "starTopologyDescription": "Mạng hình sao là mô hình mạng trong đó tất cả các thiết bị kết nối với một điểm trung tâm, thường là một switch hoặc hub. Đây là một trong những mô hình phổ biến nhất do tính linh hoạt và khả năng mở rộng dễ dàng.",
+    "starTopologyAdvantagesTitle": "Ưu điểm:",
+    "starTopologyAdvantage1": "Dễ dàng quản lý và bảo trì: Nếu một thiết bị gặp sự cố, các thiết bị khác không bị ảnh hưởng.",
+    "starTopologyAdvantage2": "Khả năng mở rộng cao: Có thể thêm thiết bị mới vào mạng mà không làm gián đoạn hoạt động của các thiết bị khác.",
+    "starTopologyAdvantage3": "Dễ dàng xác định sự cố: Khi có sự cố xảy ra, dễ dàng xác định và khắc phục.",
+    "starTopologyDisadvantagesTitle": "Nhược điểm:",
+    "starTopologyDisadvantage1": "Phụ thuộc vào điểm trung tâm: Nếu điểm trung tâm gặp sự cố, toàn bộ mạng sẽ bị ảnh hưởng.",
+    "starTopologyDisadvantage2": "Chi phí cao: Cần nhiều cáp và thiết bị trung tâm, có thể làm tăng chi phí.",
+    "starTopologyImageAlt": "Mạng Hình Sao",
+    "busTopologyTitle": "Mạng Hình Chuỗi (Bus Topology)",
+    "busTopologyDescription": "Mạng hình chuỗi kết nối tất cả các thiết bị bằng một cáp chính. Đây là một mô hình đơn giản và chi phí thấp.",
+    "busTopologyAdvantagesTitle": "Ưu điểm:",
+    "busTopologyAdvantage1": "Chi phí thấp: Yêu cầu ít cáp và thiết bị hơn so với các mô hình khác.",
+    "busTopologyAdvantage2": "Dễ dàng triển khai: Đơn giản trong việc thiết lập và cấu hình.",
+    "busTopologyDisadvantagesTitle": "Nhược điểm:",
+    "busTopologyDisadvantage1": "Khó mở rộng: Thêm thiết bị mới có thể làm giảm hiệu suất và gây ra sự cố.",
+    "busTopologyDisadvantage2": "Dễ bị ảnh hưởng: Một sự cố trên cáp chính có thể làm gián đoạn toàn bộ mạng.",
+    "busTopologyImageAlt": "Mạng Hình Chuỗi",
+    "ringTopologyTitle": "Mạng Hình Nhẫn (Ring Topology)",
+    "ringTopologyDescription": "Mạng hình nhẫn kết nối tất cả các thiết bị theo một vòng tròn, với dữ liệu được truyền theo một hướng cụ thể.",
+    "ringTopologyAdvantagesTitle": "Ưu điểm:",
+    "ringTopologyAdvantage1": "Quản lý đơn giản: Dễ dàng quản lý và cấu hình vì có ít sự can thiệp từ các thiết bị khác.",
+    "ringTopologyAdvantage2": "Hiệu suất ổn định: Hiệu suất mạng ít bị ảnh hưởng bởi lưu lượng truyền tải.",
+    "ringTopologyDisadvantagesTitle": "Nhược điểm:",
+    "ringTopologyDisadvantage1": "Sự cố có thể làm gián đoạn mạng: Nếu một thiết bị gặp sự cố, toàn bộ mạng có thể bị ảnh hưởng.",
+    "ringTopologyDisadvantage2": "Khó mở rộng: Thêm thiết bị mới có thể làm tăng độ phức tạp và gây ra sự cố.",
+    "ringTopologyImageAlt": "Mạng Hình Nhẫn",
+    "meshTopologyTitle": "Mạng Hình Lưới (Mesh Topology)",
+    "meshTopologyDescription": "Mạng hình lưới kết nối mỗi thiết bị với tất cả các thiết bị khác trong mạng, cung cấp độ tin cậy cao và khả năng phục hồi.",
+    "meshTopologyAdvantagesTitle": "Ưu điểm:",
+    "meshTopologyAdvantage1": "Độ tin cậy cao: Nếu một liên kết bị hỏng, dữ liệu có thể được chuyển qua các liên kết khác.",
+    "meshTopologyAdvantage2": "Khả năng mở rộng tốt: Dễ dàng thêm thiết bị mới mà không làm gián đoạn hoạt động của mạng.",
+    "meshTopologyDisadvantagesTitle": "Nhược điểm:",
+    "meshTopologyDisadvantage1": "Chi phí cao: Cần nhiều cáp và thiết bị, làm tăng chi phí triển khai.",
+    "meshTopologyDisadvantage2": "Quản lý phức tạp: Quản lý và cấu hình mạng có thể rất phức tạp.",
+    "meshTopologyImageAlt": "Mạng Hình Lưới",
+    "conclusionTitle": "Lời kết",
+    "conclusionText": "Mạng máy tính không ngừng phát triển và đang định hình tương lai của cả xã hội và nền kinh tế. Tôi hy vọng rằng những thông tin tôi đã chia sẻ giúp bạn có cái nhìn sâu sắc hơn về vai trò và các khía cạnh khác của mạng máy tính. Để mở rộng hiểu biết về công nghệ viễn thông, hệ thống mạng và những xu hướng công nghệ tiên tiến khác, đừng bỏ lỡ các bài viết cập nhật tại blog của tôi."
+    ,"contents":"Các bài viết",
+    "TableOfContents":"Mục lục bài viết"
 }
